--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+	
+<meta name="google-site-verification" content="cSo3LtmDuTaGU-0h4c04HtSCTZecTVcij9CC5LI6BXA" />
+	
 </head>
 
 <body>
